--- a/QLST/QLST/QLST.csproj
+++ b/QLST/QLST/QLST.csproj
@@ -59,11 +59,11 @@
     <Compile Include="frmCapnhatMK.Designer.cs">
       <DependentUpon>frmCapnhatMK.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmCapnhatNV.cs">
+    <Compile Include="frmThemNV.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmCapnhatNV.Designer.cs">
-      <DependentUpon>frmCapnhatNV.cs</DependentUpon>
+    <Compile Include="frmThemNV.Designer.cs">
+      <DependentUpon>frmThemNV.cs</DependentUpon>
     </Compile>
     <Compile Include="frmCapnhatSP.cs">
       <SubType>Form</SubType>
@@ -108,14 +108,19 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QLSLDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QLSLDataSet.xsd</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="frmCapnhatKH.resx">
       <DependentUpon>frmCapnhatKH.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmCapnhatMK.resx">
       <DependentUpon>frmCapnhatMK.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmCapnhatNV.resx">
-      <DependentUpon>frmCapnhatNV.cs</DependentUpon>
+    <EmbeddedResource Include="frmThemNV.resx">
+      <DependentUpon>frmThemNV.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmCapnhatSP.resx">
       <DependentUpon>frmCapnhatSP.cs</DependentUpon>
@@ -161,6 +166,17 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="QLSLDataSet.xsc">
+      <DependentUpon>QLSLDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="QLSLDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>QLSLDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="QLSLDataSet.xss">
+      <DependentUpon>QLSLDataSet.xsd</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
